# security-project

./: .gitignore  ARCHITECTURE.md  alembic.ini  documentation.md  requirements.txt
alembic/: env.py
app/: main.py
backend/: .env.example  .gitignore  BiometricPlatform.postman_collection.json  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  schema.sql  setup_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_entities_phone_unique_index.py  0003_add_entity_branches.py  0004_add_staff_management.py  0005_add_entity_gst_doc.py  0006_add_entity_profile_fields.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  otp.py  uploads.py  users.py
backend/app/api/v1/: admin.py  auth.py  customer.py  entity.py  public.py  router.py  staff.py
backend/app/core/: config.py  database.py  security.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  customer.py  document.py  entity.py  entity_user.py  enums.py  form_field.py  qr_code.py  user.py  user_selfie.py  webauthn_credential.py
backend/app/schemas/: __init__.py  auth.py  common.py  customer.py  entity.py  forms.py  otp_schema.py  staff.py  upload_schema.py  user_schema.py
backend/app/services/: admin_service.py  auth_service.py  customer_service.py  entity_service.py  face_service.py  otp_service.py  staff_service.py  upload_service.py  user_service.py
backend/app/utils/: file_upload.py  otp_service.py  qr_generator.py  upload.py
backend/scripts/: seed_admin.py
backend/tests/: test_health.py
docs/: README.md  (+5 more)
(+106 files in other folders)
