[project]
name = "security-project-backend"
version = "0.1.0"
description = "Customer Registration & Certificate Management System Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "pydantic==2.13.4",
    "greenlet==3.5.3",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.2.2",
    "email-validator==2.3.0",
    "qrcode[pil]==8.2",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
